--- a/bookinside/app/src/main/res/layout/login_layout.xml
+++ b/bookinside/app/src/main/res/layout/login_layout.xml
@@ -8,35 +8,37 @@
     android:background="@drawable/item_gradient"
 
     android:textAlignment="center"
-    tools:context=".FirstFragment">
+    tools:context=".LoginActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_logo"
         android:layout_width="212dp"
         android:layout_height="173dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="96dp"
-        android:src="@drawable/bookicon" />
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="70dp"
+        android:contentDescription="@string/logo_app"
+        android:src="@drawable/logo" />
 
     <EditText
-        android:id="@+id/username-input"
+        android:id="@+id/et_username"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/iv_logo"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
-        android:cursorVisible="false"
-        android:drawableStart="@drawable/ic_action_user"
+        android:cursorVisible="true"
+        android:drawableStart="@drawable/ic_action_username"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
-        android:hint="Username"
+        android:hint="@string/username_input"
+        android:autofillHints="username"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
@@ -47,10 +49,10 @@
         />
 
     <EditText
-        android:id="@+id/password-input"
+        android:id="@+id/et_password"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_below="@+id/username-input"
+        android:layout_below="@+id/et_username"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="60dp"
@@ -59,7 +61,8 @@
         android:drawableStart="@drawable/ic_action_pass"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
-        android:hint="Password"
+        android:hint="@string/password_input"
+        android:autofillHints="password"
         android:inputType="textPassword"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
@@ -69,13 +72,14 @@
         />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_login"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/password-input"
+        android:layout_below="@+id/et_password"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="75dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="75dp"
 
         app:cardBackgroundColor="#C1FFFFFF"
@@ -87,47 +91,64 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/login-button"
+                android:id="@+id/tv_login_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:fontFamily="sans-serif-thin"
-                android:text="Login"
                 android:gravity="center"
+                android:text="@string/login_button"
                 android:textColor="@color/black"
-                android:textSize="22dp" />
+                android:textSize="22sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
-
     <TextView
-        android:id="@+id/forget-pass-button"
+        android:id="@+id/tv_forget_pass_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/password-input"
+        android:layout_below="@id/card_login"
+        android:gravity="center"
         android:layout_centerInParent="true"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginEnd="63dp"
-        android:text="Forget Password"
-        android:textColor="@color/white"
-        android:textSize="15sp"
+        android:fontFamily="sans-serif-thin"
+        android:layout_marginTop="15dp"
         android:drawableStart="@drawable/ic_action_forget_pass"
-        />
-
-    <TextView
-        android:id="@+id/register_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/forget-pass-button"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="63dp"
-        android:text="Register here."
-        android:fontFamily="sans-serif-light"
+        android:text="@string/forget_pass_button"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        />
+        android:textSize="15sp" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_register"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tv_forget_pass_button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="75dp"
+
+        app:cardBackgroundColor="#66010613"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="0dp">
+
+        <RelativeLayout
+            android:background="#07000000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tv_register_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="#07000000"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center"
+                android:text="@string/register_button"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
