--- a/bookinside/app/src/main/res/navigation/nav_graph.xml
+++ b/bookinside/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/LoginActivity">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/LoginActivity"
         android:name="com.example.bookinside.LoginActivity"
-        android:label="@string/first_fragment_label"
+        android:label="@string/login_fragment_label"
         tools:layout="@layout/login_layout">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_Login_to_Register"
+            app:destination="@id/RegisterActivity" />
     </fragment>
+
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.bookinside.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/RegisterActivity"
+        android:name="com.example.bookinside.RegisterActivity"
+        android:label="@string/register_fragment_label"
+        tools:layout="@layout/register_layout">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_Register_to_Login"
+            app:destination="@id/LoginActivity" />
     </fragment>
 </navigation>
