--- a/bookinside/app/src/main/res/layout/register_layout.xml
+++ b/bookinside/app/src/main/res/layout/register_layout.xml
@@ -107,20 +107,33 @@
         android:layout_below="@+id/et_username_register"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="62dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="58dp"
+        android:autofillHints="password"
         android:drawableStart="@drawable/ic_action_pass"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
         android:hint="@string/register_password"
-        android:autofillHints="password"
         android:inputType="textPassword"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
         android:textCursorDrawable="@drawable/cursor_color"
-        app:backgroundTint="@color/white"
-        />
+        app:backgroundTint="@color/white" />
+
+<!--    <TextView-->
+<!--            android:id="@+id/tv_toggle_show_pass"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="300dp"-->
+<!--            android:layout_marginTop="-37dp"-->
+<!--            android:layout_below="@+id/et_password_register"-->
+<!--            android:background="#07000000"-->
+<!--            android:fontFamily="sans-serif-light"-->
+<!--            android:text="@string/toggle_show_password"-->
+<!--            android:textColor="#FFFFFF"-->
+<!--            android:textSize="12sp"/>-->
+
     <EditText
         android:id="@+id/et_confirm_pass_register"
         android:layout_width="wrap_content"
@@ -143,24 +156,18 @@
         app:backgroundTint="@color/white"
         />
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:id="@+id/tf_email"-->
-<!--        android:layout_width="match_parent"-->
+<!--    <TextView-->
+<!--        android:id="@+id/tv_toggle_show_confirm_pass"-->
+<!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/et_password"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginStart="120dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:textColorHint="@color/silver"-->
-<!--        android:textCursorDrawable="@drawable/cursor_color">-->
-
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="Your Email"-->
-<!--            app:backgroundTint="@color/white" />-->
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
+<!--        android:layout_marginStart="300dp"-->
+<!--        android:layout_marginTop="-37dp"-->
+<!--        android:layout_below="@+id/et_confirm_pass_register"-->
+<!--        android:background="#07000000"-->
+<!--        android:fontFamily="sans-serif-light"-->
+<!--        android:text="@string/toggle_show_password"-->
+<!--        android:textColor="#FFFFFF"-->
+<!--        android:textSize="12sp"/>-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_register"
