[ui-forget-password] forget password page design

--- a/bookinside/app/src/main/res/navigation/nav_graph.xml
+++ b/bookinside/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_Login_to_Register"
             app:destination="@id/RegisterActivity" />
+        <action
+            android:id="@+id/action_LoginActivity_to_forgetPasswordActivity"
+            app:destination="@id/forgetPasswordActivity" />
     </fragment>
 
     <fragment
@@ -24,6 +27,16 @@
 
         <action
             android:id="@+id/action_Register_to_Login"
+            app:destination="@id/LoginActivity" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/forgetPasswordActivity"
+        android:name="com.example.bookinside.ForgetPasswordActivity"
+        android:label="forget_password_layout"
+        tools:layout="@layout/forget_password_layout" >
+        <action
+            android:id="@+id/action_forgetPasswordActivity_to_LoginActivity"
             app:destination="@id/LoginActivity" />
     </fragment>
 </navigation>
