[ui-dashboard] login,register,forget-page requests

--- a/bookinside/app/src/main/res/layout/forget_password_layout.xml
+++ b/bookinside/app/src/main/res/layout/forget_password_layout.xml
@@ -65,19 +65,18 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
+        android:autofillHints="email"
         android:cursorVisible="true"
         android:drawableStart="@drawable/ic_action_email_forget_pass"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
         android:hint="@string/et_email_forget_pass"
-        android:autofillHints="email"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
         android:textCursorDrawable="@drawable/cursor_color"
         android:textSize="18sp"
-        app:backgroundTint="@color/white"
-        />
+        app:backgroundTint="@color/white" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_reset_password"
