--- a/bookinside/app/src/main/res/layout/login_layout.xml
+++ b/bookinside/app/src/main/res/layout/login_layout.xml
@@ -18,10 +18,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="70dp"
         android:contentDescription="@string/logo_app"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logoapp" />
 
     <EditText
         android:id="@+id/et_username"
@@ -33,12 +33,12 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
+        android:autofillHints="username"
         android:cursorVisible="true"
         android:drawableStart="@drawable/ic_action_username"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
         android:hint="@string/username_input"
-        android:autofillHints="username"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
@@ -48,34 +48,44 @@
 
         />
 
-    <EditText
-        android:id="@+id/et_password"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/et_password_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_below="@+id/et_username"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="3dp"
         android:layout_marginEnd="60dp"
-        android:drawableStart="@drawable/ic_action_pass"
-        android:ems="10"
-        android:fontFamily="sans-serif-thin"
-        android:hint="@string/password_input"
         android:autofillHints="password"
-        android:inputType="textPassword"
-        android:textColor="@color/white"
+        android:hint=""
         android:textColorHint="@color/silver"
-        android:textCursorDrawable="@drawable/cursor_color"
-        app:backgroundTint="@color/white"
+        app:hintTextColor="@color/white"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/white">
 
-        />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:drawableStart="@drawable/ic_action_pass"
+            android:ems="10"
+            android:fontFamily="sans-serif-thin"
+            android:hint="@string/password_input"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textColorHint="@color/silver"
+            android:textCursorDrawable="@drawable/cursor_color"
+            app:backgroundTint="@color/white" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_login"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/et_password"
+        android:layout_below="@+id/et_password_wrapper"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="75dp"
@@ -108,11 +118,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/card_login"
-        android:gravity="center"
         android:layout_centerInParent="true"
-        android:fontFamily="sans-serif-thin"
         android:layout_marginTop="15dp"
         android:drawableStart="@drawable/ic_action_forget_pass"
+        android:fontFamily="sans-serif-thin"
+        android:gravity="center"
         android:text="@string/forget_pass_button"
         android:textColor="@color/white"
         android:textSize="15sp" />
@@ -133,9 +143,9 @@
         app:cardElevation="0dp">
 
         <RelativeLayout
-            android:background="#07000000"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#07000000">
 
             <TextView
                 android:id="@+id/tv_register_here_button"
