--- a/bookinside/app/src/main/res/layout/register_layout.xml
+++ b/bookinside/app/src/main/res/layout/register_layout.xml
@@ -24,8 +24,7 @@
         android:gravity="center"
         android:text="@string/register_button"
         android:textColor="#FFFFFF"
-        android:textSize="30sp"
-       />
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/et_email"
@@ -37,19 +36,18 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
+        android:autofillHints="email"
         android:cursorVisible="true"
         android:drawableStart="@drawable/ic_action_email"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
         android:hint="@string/register_email"
-        android:autofillHints="email"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
         android:textCursorDrawable="@drawable/cursor_color"
         android:textSize="18sp"
-        app:backgroundTint="@color/white"
-        />
+        app:backgroundTint="@color/white" />
 
     <EditText
         android:id="@+id/et_phone"
@@ -61,19 +59,18 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="60dp"
+        android:autofillHints="phone"
         android:cursorVisible="true"
         android:drawableStart="@drawable/ic_action_phone"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
         android:hint="@string/register_phone"
-        android:autofillHints="phone"
+        android:inputType="phone"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
         android:textCursorDrawable="@drawable/cursor_color"
         android:textSize="18sp"
-        app:backgroundTint="@color/white"
-        android:inputType="phone"
-        />
+        app:backgroundTint="@color/white" />
 
     <EditText
         android:id="@+id/et_username_register"
@@ -85,12 +82,12 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="60dp"
+        android:autofillHints="username"
         android:cursorVisible="true"
         android:drawableStart="@drawable/ic_action_face"
         android:ems="10"
         android:fontFamily="sans-serif-thin"
         android:hint="@string/register_username"
-        android:autofillHints="username"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         android:textColorHint="@color/silver"
@@ -100,80 +97,103 @@
 
         />
 
-    <EditText
-        android:id="@+id/et_password_register"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/et_password_register_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_below="@+id/et_username_register"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="58dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="60dp"
         android:autofillHints="password"
-        android:drawableStart="@drawable/ic_action_pass"
-        android:ems="10"
-        android:fontFamily="sans-serif-thin"
-        android:hint="@string/register_password"
-        android:inputType="textPassword"
-        android:textColor="@color/white"
+        android:hint=""
         android:textColorHint="@color/silver"
-        android:textCursorDrawable="@drawable/cursor_color"
-        app:backgroundTint="@color/white" />
+        app:hintTextColor="@color/white"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/white">
 
-<!--    <TextView-->
-<!--            android:id="@+id/tv_toggle_show_pass"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="300dp"-->
-<!--            android:layout_marginTop="-37dp"-->
-<!--            android:layout_below="@+id/et_password_register"-->
-<!--            android:background="#07000000"-->
-<!--            android:fontFamily="sans-serif-light"-->
-<!--            android:text="@string/toggle_show_password"-->
-<!--            android:textColor="#FFFFFF"-->
-<!--            android:textSize="12sp"/>-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_password_register"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:drawableStart="@drawable/ic_action_pass"
+            android:ems="10"
+            android:fontFamily="sans-serif-thin"
+            android:hint="@string/register_password"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textCursorDrawable="@drawable/cursor_color"
+            app:backgroundTint="@color/white"
+           />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/et_confirm_pass_register"
+    <!--    <TextView-->
+    <!--        android:id="@+id/tv_toggle_show_pass"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@+id/et_password_register"-->
+    <!--        android:layout_marginStart="300dp"-->
+    <!--        android:layout_marginTop="-37dp"-->
+    <!--        android:background="#07000000"-->
+    <!--        android:fontFamily="sans-serif-light"-->
+    <!--        android:text="@string/toggle_show_password"-->
+    <!--        android:textColor="#FFFFFF"-->
+    <!--        android:textSize="12sp" />-->
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/et_confirm_pass_register_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_below="@+id/et_password_register"
+        android:layout_below="@+id/et_password_register_wrapper"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="60dp"
-        android:drawableStart="@drawable/ic_action_pass"
-        android:ems="10"
-        android:fontFamily="sans-serif-thin"
-        android:hint="@string/register_confirm_pass"
         android:autofillHints="confirm password"
-        android:inputType="textPassword"
-        android:textColor="@color/white"
+        android:hint=""
         android:textColorHint="@color/silver"
-        android:textCursorDrawable="@drawable/cursor_color"
-        app:backgroundTint="@color/white"
-        />
+        app:hintTextColor="@color/white"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/white"
+       >
 
-<!--    <TextView-->
-<!--        android:id="@+id/tv_toggle_show_confirm_pass"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="300dp"-->
-<!--        android:layout_marginTop="-37dp"-->
-<!--        android:layout_below="@+id/et_confirm_pass_register"-->
-<!--        android:background="#07000000"-->
-<!--        android:fontFamily="sans-serif-light"-->
-<!--        android:text="@string/toggle_show_password"-->
-<!--        android:textColor="#FFFFFF"-->
-<!--        android:textSize="12sp"/>-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_confirm_pass_register"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:drawableStart="@drawable/ic_action_pass"
+            android:ems="10"
+            android:fontFamily="sans-serif-thin"
+            android:hint="@string/register_confirm_pass"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textColorHint="@color/silver"
+            android:textCursorDrawable="@drawable/cursor_color"
+            app:backgroundTint="@color/white"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+    <!--    <TextView-->
+    <!--        android:id="@+id/tv_toggle_show_confirm_pass"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@+id/et_confirm_pass_register"-->
+    <!--        android:layout_marginStart="300dp"-->
+    <!--        android:layout_marginTop="-37dp"-->
+    <!--        android:background="#07000000"-->
+    <!--        android:fontFamily="sans-serif-light"-->
+    <!--        android:text="@string/toggle_show_password"-->
+    <!--        android:textColor="#FFFFFF"-->
+    <!--        android:textSize="12sp" />-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_register"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/et_confirm_pass_register"
+        android:layout_below="@+id/et_confirm_pass_register_wrapper"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="75dp"
@@ -188,7 +208,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/tv_login_button"
+                android:id="@+id/tv_register_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -205,10 +225,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/card_register"
-        android:gravity="center"
         android:layout_centerInParent="true"
-        android:fontFamily="sans-serif"
         android:layout_marginTop="45dp"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
         android:text="@string/have_account"
         android:textColor="@color/white"
         android:textSize="15sp" />
@@ -229,12 +249,12 @@
         app:cardElevation="0dp">
 
         <RelativeLayout
-            android:background="#07000000"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#07000000">
 
             <TextView
-                android:id="@+id/tv_have_account_button"
+                android:id="@+id/tv_back_to_login_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
