--- a/bookinside/app/src/main/res/values/styles.xml
+++ b/bookinside/app/src/main/res/values/styles.xml
@@ -17,4 +17,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="MyHintStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
