--- a/bookinside/app/src/main/res/layout/dashboard_layout.xml
+++ b/bookinside/app/src/main/res/layout/dashboard_layout.xml
@@ -10,16 +10,46 @@
     android:textAlignment="center"
     tools:context=".DashboardActivity">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_log_out"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginEnd="15dp"
+        app:cardBackgroundColor="#C1FFFFFF"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="0dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <TextView
+                android:id="@+id/tv_log_out_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
+                android:fontFamily="sans-serif-thin"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:text="@string/log_out"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
-        android:layout_height="110dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/card_log_out"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="73dp"
         android:contentDescription="@string/logo_app"
         android:src="@drawable/logoprofile" />
 
