--- a/bookinside/app/src/main/res/layout/forget_password_layout.xml
+++ b/bookinside/app/src/main/res/layout/forget_password_layout.xml
@@ -11,6 +11,19 @@
     tools:context=".ForgetPasswordActivity">
 
     <ImageView
+        android:id="@+id/iv_arrow"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/back_arrow"
+        android:src="@drawable/arrow"
+        android:clickable="true"
+        android:focusable="true" />
+
+
+    <ImageView
         android:id="@+id/iv_lock_pass"
         android:layout_width="212dp"
         android:layout_height="100dp"
