--- a/bookinside/app/src/main/res/layout/activity_book_page.xml
+++ b/bookinside/app/src/main/res/layout/activity_book_page.xml
@@ -10,7 +10,6 @@
 
     <ImageView
         android:id="@+id/book_cover_image"
-        android:src="@drawable/ion"
         android:layout_width="wrap_content"
         android:layout_height="231dp"
         android:layout_alignParentStart="true"
@@ -18,19 +17,20 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="110dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="27dp"
         android:layout_marginEnd="110dp"
-        android:layout_marginBottom="450dp" />
+        android:layout_marginBottom="493dp"
+        android:src="@drawable/ion" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="408dp"
+        android:layout_height="490dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="323dp"
+        android:layout_marginTop="241dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp">
 
@@ -39,6 +39,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
+            <LinearLayout
+                android:id="@+id/locations_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/book_description"
+                android:layout_marginTop="5dp"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/book_author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/book_title"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:text="@string/bookAuthor"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/book_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/book_author"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:text="@string/bookDescription"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+
+            <!--            <ListView-->
+            <!--                android:id="@+id/locations_list"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_below="@+id/book_description"-->
+            <!--                android:layout_marginTop="10dp"-->
+            <!--                android:padding="10dp"-->
+            <!--                android:textAlignment="center"-->
+            <!--                android:textColor="@color/white"-->
+            <!--                android:textSize="24sp" />-->
 
             <TextView
                 android:id="@+id/book_title"
@@ -52,40 +99,6 @@
                 android:textColor="@color/white"
                 android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/book_author"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:padding="10dp"
-                android:text="@string/bookAuthor"
-                android:textAlignment="center"
-                android:layout_below="@+id/book_title"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/book_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:padding="10dp"
-                android:text="@string/bookDescription"
-                android:textAlignment="center"
-                android:layout_below="@+id/book_author"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
-
-            <ListView
-                android:id="@+id/locations_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:padding="10dp"
-                android:textAlignment="center"
-                android:layout_below="@+id/book_description"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
 
         </RelativeLayout>
     </ScrollView>
